Fixed alt-kybd image widths on IE.

--- a/widgets/btt/cc/ui/content/create-composition/create-composition.css
+++ b/widgets/btt/cc/ui/content/create-composition/create-composition.css
@@ -812,6 +812,11 @@
 		.alt-kybd
 		{
 			margin: 30px 50px;
+
+			img
+			{
+				width: 100%;
+			}
 		}
 	}
 
